--- a/dsn/Base.lproj/Main.storyboard
+++ b/dsn/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B23" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -44,7 +44,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="CES-KN-aTk" kind="show" id="EuO-4Y-uJe"/>
+                                    <segue destination="iOo-Mk-jGd" kind="show" id="vKx-Ot-rVE"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -80,79 +80,79 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Prénom:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z60-hM-1SQ">
-                                <rect key="frame" x="174" y="28" width="65" height="21"/>
+                                <rect key="frame" x="174" y="92" width="65" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Nom:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b09-1o-MF9">
-                                <rect key="frame" x="197" y="66" width="42" height="21"/>
+                                <rect key="frame" x="197" y="130" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qp4-Rn-LRP">
-                                <rect key="frame" x="282" y="24" width="236" height="30"/>
+                                <rect key="frame" x="282" y="88" width="236" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bj7-op-Rof">
-                                <rect key="frame" x="282" y="62" width="236" height="30"/>
+                                <rect key="frame" x="282" y="126" width="236" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p4L-0k-niZ">
-                                <rect key="frame" x="16" y="20" width="150" height="150"/>
+                                <rect key="frame" x="16" y="84" width="150" height="150"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Nom d'utilisateur:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vex-h6-l3F">
-                                <rect key="frame" x="16" y="182" width="136" height="21"/>
+                                <rect key="frame" x="16" y="246" width="136" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ojR-r4-7wo">
-                                <rect key="frame" x="160" y="178" width="236" height="30"/>
+                                <rect key="frame" x="160" y="242" width="236" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Date d'adhésion:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u0d-5Q-LHD">
-                                <rect key="frame" x="16" y="229" width="131" height="21"/>
+                                <rect key="frame" x="16" y="293" width="131" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okR-Js-4In">
-                                <rect key="frame" x="160" y="228" width="236" height="21"/>
+                                <rect key="frame" x="160" y="292" width="236" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Sexe:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5aY-8h-kHu">
-                                <rect key="frame" x="16" y="272" width="44" height="21"/>
+                                <rect key="frame" x="16" y="336" width="44" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Masculin:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qzG-0e-2Ba">
-                                <rect key="frame" x="114" y="272" width="74" height="21"/>
+                                <rect key="frame" x="114" y="336" width="74" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Féminin" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAI-0k-gCs">
-                                <rect key="frame" x="323" y="272" width="61" height="21"/>
+                                <rect key="frame" x="323" y="336" width="61" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jwW-bo-J9s">
-                                <rect key="frame" x="196" y="267" width="51" height="31"/>
+                                <rect key="frame" x="196" y="331" width="51" height="31"/>
                             </switch>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="vqt-RR-r1w">
-                                <rect key="frame" x="392" y="267" width="51" height="31"/>
+                                <rect key="frame" x="392" y="331" width="51" height="31"/>
                             </switch>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pRS-CA-DEm">
-                                <rect key="frame" x="49" y="314" width="502" height="30"/>
+                                <rect key="frame" x="49" y="378" width="502" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Enregistrer">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -170,7 +170,6 @@
                             <constraint firstItem="u0d-5Q-LHD" firstAttribute="leading" secondItem="1ZX-Tz-YXP" secondAttribute="leadingMargin" id="18q-po-EFs"/>
                             <constraint firstItem="Vex-h6-l3F" firstAttribute="top" secondItem="p4L-0k-niZ" secondAttribute="bottom" constant="12" id="2v4-aL-eOC"/>
                             <constraint firstItem="ojR-r4-7wo" firstAttribute="leading" secondItem="Vex-h6-l3F" secondAttribute="trailing" constant="8" id="8Pn-bH-9yK"/>
-                            <constraint firstItem="p4L-0k-niZ" firstAttribute="top" secondItem="siR-ii-2AU" secondAttribute="bottom" id="9zz-p7-gaN"/>
                             <constraint firstItem="okR-Js-4In" firstAttribute="leading" secondItem="u0d-5Q-LHD" secondAttribute="trailing" constant="13" id="IPS-xM-ZtG"/>
                             <constraint firstItem="p4L-0k-niZ" firstAttribute="leading" secondItem="1ZX-Tz-YXP" secondAttribute="leadingMargin" id="Joy-33-PYc"/>
                             <constraint firstItem="pRS-CA-DEm" firstAttribute="leading" secondItem="1ZX-Tz-YXP" secondAttribute="leadingMargin" constant="33" id="KmU-8C-Q0d"/>
@@ -192,6 +191,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="Qp4-Rn-LRP" secondAttribute="trailing" constant="66" id="lS8-Pf-kgU"/>
                             <constraint firstItem="b09-1o-MF9" firstAttribute="leading" secondItem="p4L-0k-niZ" secondAttribute="trailing" constant="31" id="mLi-1b-m2w"/>
                             <constraint firstAttribute="trailingMargin" secondItem="pRS-CA-DEm" secondAttribute="trailing" constant="33" id="mdU-cO-G0K"/>
+                            <constraint firstItem="p4L-0k-niZ" firstAttribute="top" secondItem="siR-ii-2AU" secondAttribute="bottom" constant="20" id="ns5-0k-RLF"/>
                             <constraint firstItem="5aY-8h-kHu" firstAttribute="top" secondItem="u0d-5Q-LHD" secondAttribute="bottom" constant="22" id="oD4-Fz-y3E"/>
                             <constraint firstItem="Bj7-op-Rof" firstAttribute="leading" secondItem="b09-1o-MF9" secondAttribute="trailing" constant="43" id="qUg-FB-zRW"/>
                             <constraint firstItem="MAI-0k-gCs" firstAttribute="top" secondItem="okR-Js-4In" secondAttribute="bottom" constant="23" id="tQJ-Qf-MKt"/>
@@ -199,13 +199,30 @@
                             <constraint firstItem="Vex-h6-l3F" firstAttribute="leading" secondItem="1ZX-Tz-YXP" secondAttribute="leadingMargin" id="zLf-gF-2HJ"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="fzd-E4-a88"/>
                     <connections>
                         <outlet property="btnEnregistrer" destination="pRS-CA-DEm" id="wbL-cC-ilC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kWx-fD-qB3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1274" y="380"/>
+            <point key="canvasLocation" x="2004" y="308"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yww-kt-q4b">
+            <objects>
+                <navigationController id="iOo-Mk-jGd" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="X1H-ku-02A">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="CES-KN-aTk" kind="relationship" relationship="rootViewController" id="ca1-N6-w9Y"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YPj-m7-E6o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1162" y="308"/>
         </scene>
     </scenes>
 </document>
